Implement second version of Weather component test
looks like `react-test-renderer` is completely deprecated. thank you, lecture and activity PDFs that I had to fix several errors from thus far, incredibly suave.

--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
 		"dev": "next dev",
 		"build": "next build",
 		"start": "next start",
-		"test": "jest --coverage"
+		"test": "jest --coverage",
+        "test-frontend": "npm test -- -u"
 	},
 	"dependencies": {
 		"@apollo/server": "^5.3.0",
